# openocean-rust-sdk

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: Cargo.toml  basic_usage.rs  error_handling.rs  multi_chain.rs
src/: chain.rs  client.rs  error.rs  lib.rs  models.rs  types.rs
src/api/: dca.rs  gasless.rs  limit_order.rs  mod.rs  swap.rs  sweep_swap.rs  ticket.rs  zap.rs
src/models/: base.rs  dca.rs  gasless.rs  limit_order.rs  mod.rs  swap.rs  sweep_swap.rs  ticket.rs  zap.rs
